Style calculator component

--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -1,6 +1,45 @@
-.calculator {
-  width: 50vw;
-  height: 50vh;
-  padding: 0.5em;
-  background-color: rgb(82, 82, 82);
+.calculator-container {
+  background-color: #1a1a1a;
+  color: white;
+  width: 30rem;
+  height: 30rem;
+  display: grid;
+  grid-template-rows: 1fr 4fr 1fr;
+}
+
+.display {
+  display: flex;
+  background-color: #dddcff;
+  color: black;
+  font-size: 1.8rem;
+  justify-content: right;
+  align-items: center;
+  padding-right: 1rem;
+}
+
+.button-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.bottom-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+}
+
+button {
+  border: 1px solid gray;
+}
+
+.btn {
+  font-size: 1.3rem;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.orange {
+  background-color: #ffae43;
 }
