--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
+  font-family: 'Roboto', sans-serif;
   background-color: #1a1a1a;
   min-height: 100vh;
   display: flex;
