--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -1,21 +1,36 @@
 .calculator-container {
-  background-color: #1a1a1a;
+  background: rgb(25, 52, 136);
+  background: -moz-linear-gradient(0deg, rgba(25, 52, 136, 1) 0%, rgba(146, 77, 168, 1) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(25, 52, 136, 1) 0%, rgba(146, 77, 168, 1) 100%);
+  background: linear-gradient(0deg, rgba(25, 52, 136, 1) 0%, rgba(146, 77, 168, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#193488", endColorstr="#924da8", GradientType=1);
   color: white;
   width: 30rem;
   height: 30rem;
   display: grid;
   grid-template-rows: 1fr 4fr 1fr;
+  border-radius: 2rem;
 }
 
 .display {
   display: flex;
-  background-color: #dddcff;
-  color: black;
-  font-size: 2.5rem;
+  background-color: transparent;
+  color: white;
+  font-size: 2.2rem;
   align-items: center;
-  justify-content: right;
-  padding-right: 1rem;
-  border: 1px solid gray;
+  justify-content: flex-end;
+  padding-right: 1.5rem;
+}
+
+.total {
+  justify-self: flex-end;
+}
+
+.hint {
+  font-size: 1.3rem;
+  align-self: flex-start;
+  padding: 1.4rem;
+  margin-right: auto;
 }
 
 .button-grid {
@@ -24,17 +39,20 @@
 }
 
 .bottom-container {
-  width: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
+  border-radius: 2rem;
 }
 
 button {
-  border: 1px solid gray;
+  border: 1px solid transparent;
+  background: transparent;
+  color: white;
 }
 
 .btn {
   font-size: 1.3rem;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .btn:hover {
@@ -42,5 +60,21 @@ button {
 }
 
 .orange {
-  background-color: #ffae43;
+  background-color: #454ed4;
+}
+
+.zero {
+  border-bottom-left-radius: 2rem;
+}
+
+.equals {
+  border-bottom-right-radius: 2rem;
+}
+
+@media only screen
+and (max-device-width : 480px) {
+  .calculator-container {
+    max-width: 80vw;
+    max-height: 120vw;
+  }
 }
