--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -17,7 +17,7 @@
   display: flex;
   background-color: transparent;
   color: white;
-  font-size: 2.2rem;
+  font-size: 2.3rem;
   align-items: center;
   justify-content: flex-end;
   padding-right: 1.5rem;
@@ -49,6 +49,7 @@ button {
   border: 1px solid transparent;
   background: transparent;
   color: white;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .btn {
