--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -1,3 +1,9 @@
+.letsStyle {
+  color: white;
+  font-size: 1.5rem;
+  padding-bottom: 2rem;
+}
+
 .calculator-container {
   background: rgb(25, 52, 136);
   background: -moz-linear-gradient(0deg, rgba(25, 52, 136, 1) 0%, rgba(146, 77, 168, 1) 100%);
